# RoFace

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
admin/: app.js  index.html  style.css
openvino-macos-arm64/runtime/cmake/: OpenVINOConfig.cmake  OpenVINOTargets-release.cmake  OpenVINOTargets.cmake
openvino-macos-arm64/runtime/lib/arm64/Release/: libopenvino.2541.dylib  libopenvino.dylib  libopenvino_c.2025.4.1.dylib  libopenvino_c.2541.dylib  libopenvino_c.dylib  libopenvino_ir_frontend.2025.4.1.dylib  libopenvino_ir_frontend.2541.dylib  libopenvino_onnx_frontend.2541.dylib  libopenvino_onnx_frontend.dylib  libopenvino_paddle_frontend.2025.4.1.dylib  libopenvino_paddle_frontend.2541.dylib  libopenvino_paddle_frontend.dylib  libopenvino_pytorch_frontend.2025.4.1.dylib  libopenvino_pytorch_frontend.2541.dylib  libopenvino_pytorch_frontend.dylib  libopenvino_tensorflow_frontend.2541.dylib  libopenvino_tensorflow_frontend.dylib  libopenvino_tensorflow_lite_frontend.2025.4.1.dylib  (+2 more)
openvino-ubuntu24-x86_64/runtime/lib/intel64/: libopenvino_c.so.2025.4.1  libopenvino_ir_frontend.so.2025.4.1  libopenvino_paddle_frontend.so.2025.4.1  libopenvino_pytorch_frontend.so.2025.4.1  libopenvino_tensorflow_lite_frontend.so.2025.4.1
proto/: face.proto
src/: config.rs  lib.rs  main.rs
src/api/: dto.rs  grpc.rs  mod.rs  rest.rs
src/engine/: attribute.rs  batch.rs  detector.rs  embedder.rs  mod.rs  pool.rs  preprocess.rs
src/proto/: face.rs
src/service/: face_service.rs  mod.rs  types.rs
src/storage/: mod.rs  sqlite.rs  traits.rs
src/utils/: image.rs  math.rs  mod.rs
(+1 files in other folders)
